# RSA-OpenCL-cmake

./: CMakeLists.txt  CasRSA_CL.c  CasRSA_CL.cpp  big_confi.py  conf_file.txt  example_conf_pri.txt  kernel_rsa.cl
